skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_compact_dashboard_widget.snap
---
source: tests/snapshot_overview.rs
expression: "common::render_model(&model)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 2h25m  ·  Adhoc 1 · Issue 1 · Workflow 1  ·  4m old  $0.00 · 0 turns · in 0 / out 0              moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Costs │ Daemon                                                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ sessions (3 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Session demo-mixed  ·  AH:1  ISS:1  WF:1  ·  2h25m                                                                                                                                                    │"
"│                                                                                                                                                                                                      │"
"│› VST-101               Needs input  opencode Fix dashboard state reader              PR #44                                                                                                          │"
"│dashboard-rust        Submitting   codex    Build Rust dashboard                                                                                                                                      │"
"│adhoc-logs            Running      pi       Watch daemon logs                                                                                                                                         │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                                        noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
